sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:19: error: ')' expected but '}' found.
      }
      ^AlgBubbleSort1:20: error: 'while' expected but ')' found.
  }) while ( fin != 0) 
   ^AlgBubbleSort1:21: error: '(' expected but '}' found.
} 
^