sort.basic.bubble.AlgBubbleSort1.scala.code
var nbValeurs=0
fin = 0
test = false

def bubbleSort()  {
  do {
      fin = 0 
      nbValeurs=getNombresValeurs()
      for (i <- 1 to nbValeurs){
         for (j<- 2 to nbValeurs{
            test = PlusPetit(i,j)
            if(test){
               echange(i,j)
               test = false
               fin = fin +1
            }
         }
      }
  }) while ( fin != 0) 
}